# antigravity-optimizer

./: .editorconfig  .gitattributes  .gitignore  ACTIVATE_SKILLS.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  activate-skills.cmd  activate-skills.ps1  activate-skills.sh  bundles.json  pyproject.toml  setup.ps1  setup.sh  skills-update.cmd  skills-update.ps1  skills_sources.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  quality.yml
docs/: ARCHITECTURE.md  CUSTOM-SKILLS.md
scripts/: install.ps1  package-core.ps1
skills/activate-skills/: SKILL.md
templates/: master-memory.md
tests/: conftest.py  test_router.py
tools/: project_profiles.py  routing_memory.py  skill_router.py
workflows/: activate-skills.md
